--- a/resources/config.yml
+++ b/resources/config.yml
@@ -2,7 +2,7 @@
 hologram:
   lines:
     - "&eCrate %name%"
-    - "&e&lCLICK DERECHO"
+    - "&e&lRIGHT CLICK"
 
 # Display information for key items
 key:
@@ -10,9 +10,8 @@ key:
   lore:
     - "&7Exchange this key on the spawn!"
 
-# Display information for crate inventories
 inventory:
-  title: "&eCrate %name%"
+  title: "&eCrate %key_name%"
 
 command_usage: "&c/%label% %cmd% %args%"
 
@@ -21,9 +20,15 @@ no_permission: "&cNot enough permissions!"
 no_block: "&cYou aren't aiming at any block!"
 no_keys: "&cYou have no keys pending to claim!"
 no_space: "&cYou don't have space in your inventory!"
+no_crate: "&cThe crate doesn't exist!"
+invalid_number: "&cYou entered an invalid number!"
+
+help:
+  title: "&aCrates &b0.0.1&a by &b2LS&r\n"
+  command: "&e /%label% %cmd% %args%&7 > &b%description%!\n"
 
 add_location:
-  success: "&aYou added a location for the crate &b%name%&a!"
+  success: "&aYou added a location for the crate &b%crate_name%&a!"
   description: "Adds the given Crate location!"
 
 check:
@@ -33,3 +38,35 @@ check:
 claim:
   success: "&aYou claimed a total of &b%amount%&a keys!"
   description: "Claim your pending keys!"
+
+contents:
+  sucess: "&aYou are editing the contents of &b%crate_name%&a!"
+  description: "Edits contents of crates!"
+
+create:
+  success: "&aCrate &b%crate_name%&a crated successfully!"
+  description: "Creates a new Crate!"
+
+displayname:
+  success: "&aYou changed the name of &b%old_name%&a to %new_name%&a!"
+  description: "Changes displayname of Crates!"
+
+keyall:
+  success: "&You gave &b%amount% %key_name%&a keys to all players!"
+  description: "Gives keys to all players"
+
+key:
+  sucess: "&aYou gave &b%amount% %key_name%&a keys to &b%player_name%&a!"
+  description: "Gives keys to a player"
+
+list:
+  success: "&aCrates: &b%crates_list%"
+  description: "Lists available Crates"
+
+remove:
+  success: "&aYou deleted the crate &b%crate_name%&a!"
+  description: "Removes the given Crate"
+
+remove_location:
+  success: "&aYou removed a location for the crate &b%crate_name%&a!"
+  description: "Removes the given Crate location"
