add help title, subtitle and command

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -26,6 +26,7 @@ received_keys: "&b%giver_name%&a gave you &b%amount% %crate_name%&a keys!"
 help:
   title: "&aCrates &b0.0.1&a by &b2LS&r\n"
   command: "&e /%label% %cmd% %args%&7 > &b%description%!\n"
+  subtitle: ""
 
 add_location:
   success: "&aYou added a location for the crate &b%crate_name%&a!"
