--- a/resources/config.yml
+++ b/resources/config.yml
@@ -78,3 +78,7 @@ remove_location:
   success: "&aYou removed a location for the crate &b%crate_name%&a!"
   no_crate_at_location: "&cThere is no crate &b%crate_name% &cat that location."
   description: "Removes the given Crate location"
+
+slots:
+  success: "&aYou setted the slots of &b%crate%&a to &b%amount%&a!"
+  description: "Change the amount of slots"
