add permission to open keys without crate

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -21,7 +21,7 @@ no_keys: "&cYou have no keys in your hand!"
 no_keys_pending: "&cYou have no pending keys to claim!"
 no_space: "&cYou don't have space in your inventory!"
 no_crate: "&cThe crate doesn't exist!"
-no_interact: "&cYou can't interact with keys in your hand!"
+no_interact: "&cYou can't open keys without a crate!"
 invalid_key: "&cYou are trying to open &b%crate_name%&c with &b%key_name%&c!"
 invalid_number: "&cYou entered an invalid number!"
 valid_key: "&aYou opened a crate of type &b%crate_name%&a!"
